tests/test147.rael.exp
Error [tests/test147.rael:1:5]: Expected at least one expression after "show"
| show
|     ^
